parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> PROGRAM
Rule 1     PROGRAM -> STMT_LIST
Rule 2     STMT_LIST -> STMT
Rule 3     STMT_LIST -> STMT STMT_LIST
Rule 4     STMT -> EXP
Rule 5     STMT -> DEF_STMT
Rule 6     STMT -> PRINT_STMT
Rule 7     PRINT_STMT -> LPAREN PRINT_NUM EXP RPAREN
Rule 8     PRINT_STMT -> LPAREN PRINT_BOOL EXP RPAREN
Rule 9     EXP -> BOOL_VAL
Rule 10    EXP -> NUMBER
Rule 11    EXP -> ID
Rule 12    EXP -> NUM_OP
Rule 13    EXP -> LOGICAL_OP
Rule 14    EXP -> FUN_EXP
Rule 15    EXP -> FUN_CALL
Rule 16    EXP -> IF_EXP
Rule 17    NUM_OP -> LPAREN PLUS EXP EXP_LIST RPAREN
Rule 18    NUM_OP -> LPAREN MINUS EXP EXP RPAREN
Rule 19    NUM_OP -> LPAREN MULTIPLY EXP EXP_LIST RPAREN
Rule 20    NUM_OP -> LPAREN DIVIDE EXP EXP RPAREN
Rule 21    NUM_OP -> LPAREN MODULUS EXP EXP RPAREN
Rule 22    NUM_OP -> LPAREN GREATER EXP EXP RPAREN
Rule 23    NUM_OP -> LPAREN SMALLER EXP EXP RPAREN
Rule 24    NUM_OP -> LPAREN EQUAL EXP EXP_LIST RPAREN
Rule 25    EXP_LIST -> EXP
Rule 26    EXP_LIST -> EXP EXP_LIST
Rule 27    LOGICAL_OP -> LPAREN AND EXP EXP_LIST RPAREN
Rule 28    LOGICAL_OP -> LPAREN OR EXP EXP_LIST RPAREN
Rule 29    LOGICAL_OP -> LPAREN NOT EXP RPAREN
Rule 30    DEF_STMT -> LPAREN DEFINE ID EXP RPAREN
Rule 31    FUN_EXP -> LPAREN FUN LPAREN FUN_IDS RPAREN FUN_BODY RPAREN
Rule 32    FUN_IDS -> <empty>
Rule 33    FUN_IDS -> ID FUN_IDS
Rule 34    FUN_BODY -> EXP
Rule 35    FUN_BODY -> DEF_STMT EXP
Rule 36    FUN_CALL -> LPAREN FUN_EXP PARAM_LIST RPAREN
Rule 37    FUN_CALL -> LPAREN ID PARAM_LIST RPAREN
Rule 38    PARAM_LIST -> <empty>
Rule 39    PARAM_LIST -> PARAM PARAM_LIST
Rule 40    PARAM -> EXP
Rule 41    IF_EXP -> LPAREN IF EXP EXP EXP RPAREN

Terminals, with rules where they appear

AND                  : 27
BOOL_VAL             : 9
DEFINE               : 30
DIVIDE               : 20
EQUAL                : 24
FUN                  : 31
GREATER              : 22
ID                   : 11 30 33 37
IF                   : 41
LPAREN               : 7 8 17 18 19 20 21 22 23 24 27 28 29 30 31 31 36 37 41
MINUS                : 18
MODULUS              : 21
MULTIPLY             : 19
NOT                  : 29
NUMBER               : 10
OR                   : 28
PLUS                 : 17
PRINT_BOOL           : 8
PRINT_NUM            : 7
RPAREN               : 7 8 17 18 19 20 21 22 23 24 27 28 29 30 31 31 36 37 41
SMALLER              : 23
error                : 

Nonterminals, with rules where they appear

DEF_STMT             : 5 35
EXP                  : 4 7 8 17 18 18 19 20 20 21 21 22 22 23 23 24 25 26 27 28 29 30 34 35 40 41 41 41
EXP_LIST             : 17 19 24 26 27 28
FUN_BODY             : 31
FUN_CALL             : 15
FUN_EXP              : 14 36
FUN_IDS              : 31 33
IF_EXP               : 16
LOGICAL_OP           : 13
NUM_OP               : 12
PARAM                : 39
PARAM_LIST           : 36 37 39
PRINT_STMT           : 6
PROGRAM              : 0
STMT                 : 2 3
STMT_LIST            : 1 3

Parsing method: LALR

state 0

    (0) S' -> . PROGRAM
    (1) PROGRAM -> . STMT_LIST
    (2) STMT_LIST -> . STMT
    (3) STMT_LIST -> . STMT STMT_LIST
    (4) STMT -> . EXP
    (5) STMT -> . DEF_STMT
    (6) STMT -> . PRINT_STMT
    (9) EXP -> . BOOL_VAL
    (10) EXP -> . NUMBER
    (11) EXP -> . ID
    (12) EXP -> . NUM_OP
    (13) EXP -> . LOGICAL_OP
    (14) EXP -> . FUN_EXP
    (15) EXP -> . FUN_CALL
    (16) EXP -> . IF_EXP
    (30) DEF_STMT -> . LPAREN DEFINE ID EXP RPAREN
    (7) PRINT_STMT -> . LPAREN PRINT_NUM EXP RPAREN
    (8) PRINT_STMT -> . LPAREN PRINT_BOOL EXP RPAREN
    (17) NUM_OP -> . LPAREN PLUS EXP EXP_LIST RPAREN
    (18) NUM_OP -> . LPAREN MINUS EXP EXP RPAREN
    (19) NUM_OP -> . LPAREN MULTIPLY EXP EXP_LIST RPAREN
    (20) NUM_OP -> . LPAREN DIVIDE EXP EXP RPAREN
    (21) NUM_OP -> . LPAREN MODULUS EXP EXP RPAREN
    (22) NUM_OP -> . LPAREN GREATER EXP EXP RPAREN
    (23) NUM_OP -> . LPAREN SMALLER EXP EXP RPAREN
    (24) NUM_OP -> . LPAREN EQUAL EXP EXP_LIST RPAREN
    (27) LOGICAL_OP -> . LPAREN AND EXP EXP_LIST RPAREN
    (28) LOGICAL_OP -> . LPAREN OR EXP EXP_LIST RPAREN
    (29) LOGICAL_OP -> . LPAREN NOT EXP RPAREN
    (31) FUN_EXP -> . LPAREN FUN LPAREN FUN_IDS RPAREN FUN_BODY RPAREN
    (36) FUN_CALL -> . LPAREN FUN_EXP PARAM_LIST RPAREN
    (37) FUN_CALL -> . LPAREN ID PARAM_LIST RPAREN
    (41) IF_EXP -> . LPAREN IF EXP EXP EXP RPAREN

    BOOL_VAL        shift and go to state 7
    NUMBER          shift and go to state 8
    ID              shift and go to state 9
    LPAREN          shift and go to state 15

    PROGRAM                        shift and go to state 1
    STMT_LIST                      shift and go to state 2
    STMT                           shift and go to state 3
    EXP                            shift and go to state 4
    DEF_STMT                       shift and go to state 5
    PRINT_STMT                     shift and go to state 6
    NUM_OP                         shift and go to state 10
    LOGICAL_OP                     shift and go to state 11
    FUN_EXP                        shift and go to state 12
    FUN_CALL                       shift and go to state 13
    IF_EXP                         shift and go to state 14

state 1

    (0) S' -> PROGRAM .



state 2

    (1) PROGRAM -> STMT_LIST .

    $end            reduce using rule 1 (PROGRAM -> STMT_LIST .)


state 3

    (2) STMT_LIST -> STMT .
    (3) STMT_LIST -> STMT . STMT_LIST
    (2) STMT_LIST -> . STMT
    (3) STMT_LIST -> . STMT STMT_LIST
    (4) STMT -> . EXP
    (5) STMT -> . DEF_STMT
    (6) STMT -> . PRINT_STMT
    (9) EXP -> . BOOL_VAL
    (10) EXP -> . NUMBER
    (11) EXP -> . ID
    (12) EXP -> . NUM_OP
    (13) EXP -> . LOGICAL_OP
    (14) EXP -> . FUN_EXP
    (15) EXP -> . FUN_CALL
    (16) EXP -> . IF_EXP
    (30) DEF_STMT -> . LPAREN DEFINE ID EXP RPAREN
    (7) PRINT_STMT -> . LPAREN PRINT_NUM EXP RPAREN
    (8) PRINT_STMT -> . LPAREN PRINT_BOOL EXP RPAREN
    (17) NUM_OP -> . LPAREN PLUS EXP EXP_LIST RPAREN
    (18) NUM_OP -> . LPAREN MINUS EXP EXP RPAREN
    (19) NUM_OP -> . LPAREN MULTIPLY EXP EXP_LIST RPAREN
    (20) NUM_OP -> . LPAREN DIVIDE EXP EXP RPAREN
    (21) NUM_OP -> . LPAREN MODULUS EXP EXP RPAREN
    (22) NUM_OP -> . LPAREN GREATER EXP EXP RPAREN
    (23) NUM_OP -> . LPAREN SMALLER EXP EXP RPAREN
    (24) NUM_OP -> . LPAREN EQUAL EXP EXP_LIST RPAREN
    (27) LOGICAL_OP -> . LPAREN AND EXP EXP_LIST RPAREN
    (28) LOGICAL_OP -> . LPAREN OR EXP EXP_LIST RPAREN
    (29) LOGICAL_OP -> . LPAREN NOT EXP RPAREN
    (31) FUN_EXP -> . LPAREN FUN LPAREN FUN_IDS RPAREN FUN_BODY RPAREN
    (36) FUN_CALL -> . LPAREN FUN_EXP PARAM_LIST RPAREN
    (37) FUN_CALL -> . LPAREN ID PARAM_LIST RPAREN
    (41) IF_EXP -> . LPAREN IF EXP EXP EXP RPAREN

    $end            reduce using rule 2 (STMT_LIST -> STMT .)
    BOOL_VAL        shift and go to state 7
    NUMBER          shift and go to state 8
    ID              shift and go to state 9
    LPAREN          shift and go to state 15

    STMT                           shift and go to state 3
    STMT_LIST                      shift and go to state 16
    EXP                            shift and go to state 4
    DEF_STMT                       shift and go to state 5
    PRINT_STMT                     shift and go to state 6
    NUM_OP                         shift and go to state 10
    LOGICAL_OP                     shift and go to state 11
    FUN_EXP                        shift and go to state 12
    FUN_CALL                       shift and go to state 13
    IF_EXP                         shift and go to state 14

state 4

    (4) STMT -> EXP .

    BOOL_VAL        reduce using rule 4 (STMT -> EXP .)
    NUMBER          reduce using rule 4 (STMT -> EXP .)
    ID              reduce using rule 4 (STMT -> EXP .)
    LPAREN          reduce using rule 4 (STMT -> EXP .)
    $end            reduce using rule 4 (STMT -> EXP .)


state 5

    (5) STMT -> DEF_STMT .

    BOOL_VAL        reduce using rule 5 (STMT -> DEF_STMT .)
    NUMBER          reduce using rule 5 (STMT -> DEF_STMT .)
    ID              reduce using rule 5 (STMT -> DEF_STMT .)
    LPAREN          reduce using rule 5 (STMT -> DEF_STMT .)
    $end            reduce using rule 5 (STMT -> DEF_STMT .)


state 6

    (6) STMT -> PRINT_STMT .

    BOOL_VAL        reduce using rule 6 (STMT -> PRINT_STMT .)
    NUMBER          reduce using rule 6 (STMT -> PRINT_STMT .)
    ID              reduce using rule 6 (STMT -> PRINT_STMT .)
    LPAREN          reduce using rule 6 (STMT -> PRINT_STMT .)
    $end            reduce using rule 6 (STMT -> PRINT_STMT .)


state 7

    (9) EXP -> BOOL_VAL .

    BOOL_VAL        reduce using rule 9 (EXP -> BOOL_VAL .)
    NUMBER          reduce using rule 9 (EXP -> BOOL_VAL .)
    ID              reduce using rule 9 (EXP -> BOOL_VAL .)
    LPAREN          reduce using rule 9 (EXP -> BOOL_VAL .)
    $end            reduce using rule 9 (EXP -> BOOL_VAL .)
    RPAREN          reduce using rule 9 (EXP -> BOOL_VAL .)


state 8

    (10) EXP -> NUMBER .

    BOOL_VAL        reduce using rule 10 (EXP -> NUMBER .)
    NUMBER          reduce using rule 10 (EXP -> NUMBER .)
    ID              reduce using rule 10 (EXP -> NUMBER .)
    LPAREN          reduce using rule 10 (EXP -> NUMBER .)
    $end            reduce using rule 10 (EXP -> NUMBER .)
    RPAREN          reduce using rule 10 (EXP -> NUMBER .)


state 9

    (11) EXP -> ID .

    BOOL_VAL        reduce using rule 11 (EXP -> ID .)
    NUMBER          reduce using rule 11 (EXP -> ID .)
    ID              reduce using rule 11 (EXP -> ID .)
    LPAREN          reduce using rule 11 (EXP -> ID .)
    $end            reduce using rule 11 (EXP -> ID .)
    RPAREN          reduce using rule 11 (EXP -> ID .)


state 10

    (12) EXP -> NUM_OP .

    BOOL_VAL        reduce using rule 12 (EXP -> NUM_OP .)
    NUMBER          reduce using rule 12 (EXP -> NUM_OP .)
    ID              reduce using rule 12 (EXP -> NUM_OP .)
    LPAREN          reduce using rule 12 (EXP -> NUM_OP .)
    $end            reduce using rule 12 (EXP -> NUM_OP .)
    RPAREN          reduce using rule 12 (EXP -> NUM_OP .)


state 11

    (13) EXP -> LOGICAL_OP .

    BOOL_VAL        reduce using rule 13 (EXP -> LOGICAL_OP .)
    NUMBER          reduce using rule 13 (EXP -> LOGICAL_OP .)
    ID              reduce using rule 13 (EXP -> LOGICAL_OP .)
    LPAREN          reduce using rule 13 (EXP -> LOGICAL_OP .)
    $end            reduce using rule 13 (EXP -> LOGICAL_OP .)
    RPAREN          reduce using rule 13 (EXP -> LOGICAL_OP .)


state 12

    (14) EXP -> FUN_EXP .

    BOOL_VAL        reduce using rule 14 (EXP -> FUN_EXP .)
    NUMBER          reduce using rule 14 (EXP -> FUN_EXP .)
    ID              reduce using rule 14 (EXP -> FUN_EXP .)
    LPAREN          reduce using rule 14 (EXP -> FUN_EXP .)
    $end            reduce using rule 14 (EXP -> FUN_EXP .)
    RPAREN          reduce using rule 14 (EXP -> FUN_EXP .)


state 13

    (15) EXP -> FUN_CALL .

    BOOL_VAL        reduce using rule 15 (EXP -> FUN_CALL .)
    NUMBER          reduce using rule 15 (EXP -> FUN_CALL .)
    ID              reduce using rule 15 (EXP -> FUN_CALL .)
    LPAREN          reduce using rule 15 (EXP -> FUN_CALL .)
    $end            reduce using rule 15 (EXP -> FUN_CALL .)
    RPAREN          reduce using rule 15 (EXP -> FUN_CALL .)


state 14

    (16) EXP -> IF_EXP .

    BOOL_VAL        reduce using rule 16 (EXP -> IF_EXP .)
    NUMBER          reduce using rule 16 (EXP -> IF_EXP .)
    ID              reduce using rule 16 (EXP -> IF_EXP .)
    LPAREN          reduce using rule 16 (EXP -> IF_EXP .)
    $end            reduce using rule 16 (EXP -> IF_EXP .)
    RPAREN          reduce using rule 16 (EXP -> IF_EXP .)


state 15

    (30) DEF_STMT -> LPAREN . DEFINE ID EXP RPAREN
    (7) PRINT_STMT -> LPAREN . PRINT_NUM EXP RPAREN
    (8) PRINT_STMT -> LPAREN . PRINT_BOOL EXP RPAREN
    (17) NUM_OP -> LPAREN . PLUS EXP EXP_LIST RPAREN
    (18) NUM_OP -> LPAREN . MINUS EXP EXP RPAREN
    (19) NUM_OP -> LPAREN . MULTIPLY EXP EXP_LIST RPAREN
    (20) NUM_OP -> LPAREN . DIVIDE EXP EXP RPAREN
    (21) NUM_OP -> LPAREN . MODULUS EXP EXP RPAREN
    (22) NUM_OP -> LPAREN . GREATER EXP EXP RPAREN
    (23) NUM_OP -> LPAREN . SMALLER EXP EXP RPAREN
    (24) NUM_OP -> LPAREN . EQUAL EXP EXP_LIST RPAREN
    (27) LOGICAL_OP -> LPAREN . AND EXP EXP_LIST RPAREN
    (28) LOGICAL_OP -> LPAREN . OR EXP EXP_LIST RPAREN
    (29) LOGICAL_OP -> LPAREN . NOT EXP RPAREN
    (31) FUN_EXP -> LPAREN . FUN LPAREN FUN_IDS RPAREN FUN_BODY RPAREN
    (36) FUN_CALL -> LPAREN . FUN_EXP PARAM_LIST RPAREN
    (37) FUN_CALL -> LPAREN . ID PARAM_LIST RPAREN
    (41) IF_EXP -> LPAREN . IF EXP EXP EXP RPAREN
    (31) FUN_EXP -> . LPAREN FUN LPAREN FUN_IDS RPAREN FUN_BODY RPAREN

    DEFINE          shift and go to state 18
    PRINT_NUM       shift and go to state 20
    PRINT_BOOL      shift and go to state 21
    PLUS            shift and go to state 22
    MINUS           shift and go to state 23
    MULTIPLY        shift and go to state 24
    DIVIDE          shift and go to state 25
    MODULUS         shift and go to state 26
    GREATER         shift and go to state 27
    SMALLER         shift and go to state 28
    EQUAL           shift and go to state 29
    AND             shift and go to state 30
    OR              shift and go to state 31
    NOT             shift and go to state 32
    FUN             shift and go to state 33
    ID              shift and go to state 19
    IF              shift and go to state 35
    LPAREN          shift and go to state 17

    FUN_EXP                        shift and go to state 34

state 16

    (3) STMT_LIST -> STMT STMT_LIST .

    $end            reduce using rule 3 (STMT_LIST -> STMT STMT_LIST .)


state 17

    (31) FUN_EXP -> LPAREN . FUN LPAREN FUN_IDS RPAREN FUN_BODY RPAREN

    FUN             shift and go to state 33


state 18

    (30) DEF_STMT -> LPAREN DEFINE . ID EXP RPAREN

    ID              shift and go to state 36


state 19

    (37) FUN_CALL -> LPAREN ID . PARAM_LIST RPAREN
    (38) PARAM_LIST -> .
    (39) PARAM_LIST -> . PARAM PARAM_LIST
    (40) PARAM -> . EXP
    (9) EXP -> . BOOL_VAL
    (10) EXP -> . NUMBER
    (11) EXP -> . ID
    (12) EXP -> . NUM_OP
    (13) EXP -> . LOGICAL_OP
    (14) EXP -> . FUN_EXP
    (15) EXP -> . FUN_CALL
    (16) EXP -> . IF_EXP
    (17) NUM_OP -> . LPAREN PLUS EXP EXP_LIST RPAREN
    (18) NUM_OP -> . LPAREN MINUS EXP EXP RPAREN
    (19) NUM_OP -> . LPAREN MULTIPLY EXP EXP_LIST RPAREN
    (20) NUM_OP -> . LPAREN DIVIDE EXP EXP RPAREN
    (21) NUM_OP -> . LPAREN MODULUS EXP EXP RPAREN
    (22) NUM_OP -> . LPAREN GREATER EXP EXP RPAREN
    (23) NUM_OP -> . LPAREN SMALLER EXP EXP RPAREN
    (24) NUM_OP -> . LPAREN EQUAL EXP EXP_LIST RPAREN
    (27) LOGICAL_OP -> . LPAREN AND EXP EXP_LIST RPAREN
    (28) LOGICAL_OP -> . LPAREN OR EXP EXP_LIST RPAREN
    (29) LOGICAL_OP -> . LPAREN NOT EXP RPAREN
    (31) FUN_EXP -> . LPAREN FUN LPAREN FUN_IDS RPAREN FUN_BODY RPAREN
    (36) FUN_CALL -> . LPAREN FUN_EXP PARAM_LIST RPAREN
    (37) FUN_CALL -> . LPAREN ID PARAM_LIST RPAREN
    (41) IF_EXP -> . LPAREN IF EXP EXP EXP RPAREN

    RPAREN          reduce using rule 38 (PARAM_LIST -> .)
    BOOL_VAL        shift and go to state 7
    NUMBER          shift and go to state 8
    ID              shift and go to state 9
    LPAREN          shift and go to state 37

    PARAM_LIST                     shift and go to state 38
    PARAM                          shift and go to state 39
    EXP                            shift and go to state 40
    NUM_OP                         shift and go to state 10
    LOGICAL_OP                     shift and go to state 11
    FUN_EXP                        shift and go to state 12
    FUN_CALL                       shift and go to state 13
    IF_EXP                         shift and go to state 14

state 20

    (7) PRINT_STMT -> LPAREN PRINT_NUM . EXP RPAREN
    (9) EXP -> . BOOL_VAL
    (10) EXP -> . NUMBER
    (11) EXP -> . ID
    (12) EXP -> . NUM_OP
    (13) EXP -> . LOGICAL_OP
    (14) EXP -> . FUN_EXP
    (15) EXP -> . FUN_CALL
    (16) EXP -> . IF_EXP
    (17) NUM_OP -> . LPAREN PLUS EXP EXP_LIST RPAREN
    (18) NUM_OP -> . LPAREN MINUS EXP EXP RPAREN
    (19) NUM_OP -> . LPAREN MULTIPLY EXP EXP_LIST RPAREN
    (20) NUM_OP -> . LPAREN DIVIDE EXP EXP RPAREN
    (21) NUM_OP -> . LPAREN MODULUS EXP EXP RPAREN
    (22) NUM_OP -> . LPAREN GREATER EXP EXP RPAREN
    (23) NUM_OP -> . LPAREN SMALLER EXP EXP RPAREN
    (24) NUM_OP -> . LPAREN EQUAL EXP EXP_LIST RPAREN
    (27) LOGICAL_OP -> . LPAREN AND EXP EXP_LIST RPAREN
    (28) LOGICAL_OP -> . LPAREN OR EXP EXP_LIST RPAREN
    (29) LOGICAL_OP -> . LPAREN NOT EXP RPAREN
    (31) FUN_EXP -> . LPAREN FUN LPAREN FUN_IDS RPAREN FUN_BODY RPAREN
    (36) FUN_CALL -> . LPAREN FUN_EXP PARAM_LIST RPAREN
    (37) FUN_CALL -> . LPAREN ID PARAM_LIST RPAREN
    (41) IF_EXP -> . LPAREN IF EXP EXP EXP RPAREN

    BOOL_VAL        shift and go to state 7
    NUMBER          shift and go to state 8
    ID              shift and go to state 9
    LPAREN          shift and go to state 37

    EXP                            shift and go to state 41
    NUM_OP                         shift and go to state 10
    LOGICAL_OP                     shift and go to state 11
    FUN_EXP                        shift and go to state 12
    FUN_CALL                       shift and go to state 13
    IF_EXP                         shift and go to state 14

state 21

    (8) PRINT_STMT -> LPAREN PRINT_BOOL . EXP RPAREN
    (9) EXP -> . BOOL_VAL
    (10) EXP -> . NUMBER
    (11) EXP -> . ID
    (12) EXP -> . NUM_OP
    (13) EXP -> . LOGICAL_OP
    (14) EXP -> . FUN_EXP
    (15) EXP -> . FUN_CALL
    (16) EXP -> . IF_EXP
    (17) NUM_OP -> . LPAREN PLUS EXP EXP_LIST RPAREN
    (18) NUM_OP -> . LPAREN MINUS EXP EXP RPAREN
    (19) NUM_OP -> . LPAREN MULTIPLY EXP EXP_LIST RPAREN
    (20) NUM_OP -> . LPAREN DIVIDE EXP EXP RPAREN
    (21) NUM_OP -> . LPAREN MODULUS EXP EXP RPAREN
    (22) NUM_OP -> . LPAREN GREATER EXP EXP RPAREN
    (23) NUM_OP -> . LPAREN SMALLER EXP EXP RPAREN
    (24) NUM_OP -> . LPAREN EQUAL EXP EXP_LIST RPAREN
    (27) LOGICAL_OP -> . LPAREN AND EXP EXP_LIST RPAREN
    (28) LOGICAL_OP -> . LPAREN OR EXP EXP_LIST RPAREN
    (29) LOGICAL_OP -> . LPAREN NOT EXP RPAREN
    (31) FUN_EXP -> . LPAREN FUN LPAREN FUN_IDS RPAREN FUN_BODY RPAREN
    (36) FUN_CALL -> . LPAREN FUN_EXP PARAM_LIST RPAREN
    (37) FUN_CALL -> . LPAREN ID PARAM_LIST RPAREN
    (41) IF_EXP -> . LPAREN IF EXP EXP EXP RPAREN

    BOOL_VAL        shift and go to state 7
    NUMBER          shift and go to state 8
    ID              shift and go to state 9
    LPAREN          shift and go to state 37

